test indo transcript
test indo transcript

--- a/InterviewAI - Copy.ipynb
+++ b/InterviewAI - Copy.ipynb
@@ -36,15 +36,20 @@
     }
    ],
    "source": [
-    "#What exactly is the main thing i have to do? Do i have to focus on a main topic like analysing how the candidate answer question?\n",
+    "\"\"\"\n",
+    "#What exactly is the main thing i have to do? Do i have to focus on a main topic like analysing how the candidate answer question? \n",
     "#like i do comparing ways to implement that? So thenfor the report I write mainly on comparing ways to implement this?\n",
     "#or focus on doing indo analysis\n",
     "\n",
-    "#If no, I try to implement functions like i do summarization, keyword extraction, all these can be done by chatgpt, is chatgpt allowed?\n",
     "#The dataset video all answer are quite short, Do i have to find other dataset that is long?\n",
     "\n",
     "#Does the report use the \"research base example\" or the \"development base project example?\"  Give 2 type report to him to see\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#If no, I try to implement functions like i do summarization, keyword extraction, all these can be done by chatgpt\n",
+    "\"\"\"\n",
     "!pip install moviepy\n",
     "!pip install SpeechRecognition\n",
     "import moviepy.editor as mp \n",
@@ -130,8 +135,8 @@
     "import moviepy.editor as mp\n",
     "import speech_recognition as sr\n",
     "\n",
-    "#1. Test dataset video (done)\n",
-    "#2. test indo video (done)\n",
+    "# 1. Test dataset video (done)\n",
+    "# 2. test indo video (done)\n",
     "# https://stackoverflow.com/questions/51517700/changing-language-in-python-speechrecognition (done)\n",
     "try:\n",
     "    language_choice = input(\"Choose transcription language (type 'en' for English or 'id' for Indonesian): \").strip().lower()\n",
@@ -236,23 +241,20 @@
    "source": [
     "from transformers import BartForConditionalGeneration, BartTokenizer\n",
     "\n",
-    "# Load the pre-trained BART model and tokenizer\n",
+    "# pre-trained BART model and tokenizer\n",
     "model_name = 'facebook/bart-large-cnn'\n",
     "model = BartForConditionalGeneration.from_pretrained(model_name)\n",
     "tokenizer = BartTokenizer.from_pretrained(model_name)\n",
     "\n",
-    "# Function to summarise text\n",
+    "# summarise text\n",
     "# can i use chatgpt to do this?\n",
     "def summarise_text(text, max_length=130, min_length=30, do_sample=False):\n",
-    "    # Encode the text\n",
     "    inputs = tokenizer.encode(\"summarize: \" + text, return_tensors=\"pt\", max_length=1024, truncation=True)\n",
-    "    # Generate the summary\n",
     "    summary_ids = model.generate(inputs, max_length=max_length, min_length=min_length, length_penalty=2.0, num_beams=4, early_stopping=True, do_sample=do_sample)\n",
-    "    # Decode the summary\n",
     "    summary = tokenizer.decode(summary_ids[0], skip_special_tokens=True)\n",
     "    return summary\n",
     "\n",
-    "# Example usage\n",
+    "# Test\n",
     "#text = \"\"\"a few weeks ago I did a poll on LinkedIn asking you all what was the number one reason that is stopping you from using speech recognition and we'll the results kind of shocked me a little bit because a massive 75% of you said that this was down to the accuracy now you know me I love a challenge so I had to go out there and prove to you how good the accuracy is but I might have embarrassed myself a long way so just stay with me on this one let's go to the demo good day mate I apologise in advance for the absolutely awful impressions you're going to see in this demonstration full stop I am doing an Australian accent to show how good dragons accuracy is even with a variety of different dialects full stop as you can see comma dragon is still able to understand me comma even when I am embarrassing myself like this exclamation mark\n",
     "#Now I'm going to speak in an American accent comma which is a little bit easier because I can just speak like a Kardashian full stop as you can see comma dragon is understanding me word for word without a single mistake exclamation mark\n",
     "#Now I'm going back to my normal Southern English accent comma but I am speaking at a much faster pace than I usually would simply to demonstrate that the accuracy doesn't differ when you throw different challenges at the software full stop in fact comma it actually likes it when you speak in a normal manner as it helps the technology to understand the context of different words such as homophones full stop so comma if your reason for not using speech recognition is that you worry about the accuracy with your accent comma well now you have no excuse exclamation mark OK I'll be serious now I promise if you're still with me after that demo then well done because that was just the weirdest idea I've ever had but we move so sorry we do say that the more you use dragon the better the accuracy will be it learns your voice patterns and your dialect and so the more you use it the better understands you of course that equals better accuracy have a good microphone is also really key for good accuracy for example we only recommend microphones or headsets that have noise cancellation capability so in my demo I was using the Philips speech 1 which is a really great headset and of course has noise cancellation that's all for me today if we speak in these crazy accents hasn't shown you how good dragons accuracy is thinner don't know what will be honest but that is always something that you can try and that is a free proof of concept trial which means you can try the software and see it for yourself completely free of charge so there's always not as always though if you have any comments questions theories make sure you don't live in the comments because I'd love to continue talking Dragons with he dies\"\"\"\n",
@@ -298,13 +300,12 @@
     "    \n",
     "    return keywords\n",
     "\n",
-    "# Example usage\n",
     "keywords = extract_keywords_tfidf(text, top_n=5)\n",
     "print(\"Top Keywords (TF-IDF):\", keywords)\n",
     "\n",
     "print(type(keywords))\n",
     "\n",
-    "# Extract 'keyword' keys and save in a new list\n",
+    "# Extract 'keyword' keys \n",
     "keyword_keys = [keyword for keyword, score in keywords]\n",
     "print(\"Keyword Keys:\", keyword_keys)\n",
     "print(type(keyword_keys))"
