--- a/InterviewAI.ipynb
+++ b/InterviewAI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "3feef1b9-70ff-4c23-b8c0-23f730eaa54d",
    "metadata": {},
    "outputs": [
@@ -13,7 +13,7 @@
       "Requirement already satisfied: moviepy in c:\\users\\keyu\\anaconda3\\lib\\site-packages (1.0.3)\n",
       "Requirement already satisfied: decorator<5.0,>=4.0.2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from moviepy) (4.4.2)\n",
       "Requirement already satisfied: tqdm<5.0,>=4.11.2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from moviepy) (4.65.0)\n",
-      "Requirement already satisfied: requests<3.0,>=2.8.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from moviepy) (2.31.0)\n",
+      "Requirement already satisfied: requests<3.0,>=2.8.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from moviepy) (2.32.3)\n",
       "Requirement already satisfied: proglog<=1.0.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from moviepy) (0.1.10)\n",
       "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from moviepy) (1.26.4)\n",
       "Requirement already satisfied: imageio<3.0,>=2.5 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from moviepy) (2.33.1)\n",
@@ -26,7 +26,7 @@
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests<3.0,>=2.8.1->moviepy) (2024.8.30)\n",
       "Requirement already satisfied: colorama in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from tqdm<5.0,>=4.11.2->moviepy) (0.4.6)\n",
       "Requirement already satisfied: SpeechRecognition in c:\\users\\keyu\\anaconda3\\lib\\site-packages (3.10.4)\n",
-      "Requirement already satisfied: requests>=2.26.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from SpeechRecognition) (2.31.0)\n",
+      "Requirement already satisfied: requests>=2.26.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from SpeechRecognition) (2.32.3)\n",
       "Requirement already satisfied: typing-extensions in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from SpeechRecognition) (4.9.0)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests>=2.26.0->SpeechRecognition) (2.0.4)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\keyu\\appdata\\roaming\\python\\python311\\site-packages (from requests>=2.26.0->SpeechRecognition) (2.10)\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "c725592e-f487-44e5-b9c9-7c11d503d31a",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "7c75cf68-318c-461d-8084-be5252e20234",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                    "
+      "                                                        "
      ]
     },
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "386d7397-d8b8-4a39-9ccf-e905fbd57de2",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
       "Requirement already satisfied: packaging>=20.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (23.1)\n",
       "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (6.0.1)\n",
       "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (2023.10.3)\n",
-      "Requirement already satisfied: requests in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (2.31.0)\n",
+      "Requirement already satisfied: requests in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (2.32.3)\n",
       "Requirement already satisfied: safetensors>=0.4.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (0.4.3)\n",
       "Requirement already satisfied: tokenizers<0.20,>=0.19 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (0.19.1)\n",
       "Requirement already satisfied: tqdm>=4.27 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (4.65.0)\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "0a162d30-d9ee-4e04-8148-823eb33a60c8",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "dcbb673e-2e78-4f67-be53-63a2427cb444",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "58a1d460-7b35-4bcb-a25a-36502e8d6e76",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,186 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4d6a815-8115-4ea9-9913-e70431164881",
+   "id": "f9f8d637-1392-435d-8bc8-e870311161c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7a3df467-4546-49aa-ac8e-a5e412d92b10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: transformers in c:\\users\\keyu\\anaconda3\\lib\\site-packages (4.43.3)\n",
+      "Requirement already satisfied: torch in c:\\users\\keyu\\anaconda3\\lib\\site-packages (2.4.0)\n",
+      "Requirement already satisfied: filelock in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (3.13.1)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.23.2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (0.24.2)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (1.26.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (23.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (6.0.1)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (2023.10.3)\n",
+      "Requirement already satisfied: requests in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (2.32.3)\n",
+      "Requirement already satisfied: safetensors>=0.4.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (0.4.3)\n",
+      "Requirement already satisfied: tokenizers<0.20,>=0.19 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (0.19.1)\n",
+      "Requirement already satisfied: tqdm>=4.27 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (4.65.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (4.9.0)\n",
+      "Requirement already satisfied: sympy in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (1.12)\n",
+      "Requirement already satisfied: networkx in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (3.1)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (3.1.3)\n",
+      "Requirement already satisfied: fsspec in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (2023.10.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from jinja2->torch) (2.1.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->transformers) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\keyu\\appdata\\roaming\\python\\python311\\site-packages (from requests->transformers) (2.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->transformers) (2.0.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->transformers) (2024.8.30)\n",
+      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sympy->torch) (1.3.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Install necessary libraries\n",
+    "!pip install transformers torch\n",
+    "\n",
+    "# Import libraries\n",
+    "from transformers import pipeline\n",
+    "import torch\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "82d407e3-59d5-474c-bd1e-eea797ac14eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No model was supplied, defaulted to distilbert/distilbert-base-uncased-finetuned-sst-2-english and revision af0f99b (https://huggingface.co/distilbert/distilbert-base-uncased-finetuned-sst-2-english).\n",
+      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "English Sentiment Analysis:\n",
+      "Sentence: 'I love this product! It's amazing!' | Sentiment: POSITIVE, Score: 1.00\n",
+      "Sentence: 'This is the worst experience I've ever had.' | Sentiment: NEGATIVE, Score: 1.00\n",
+      "Sentence: 'It's okay, not great, but not terrible either.' | Sentiment: POSITIVE, Score: 0.99\n",
+      "\n",
+      "Indonesian Sentiment Analysis:\n",
+      "Sentence: 'Saya sangat menyukai produk ini!' | Sentiment: positive, Score: 1.00\n",
+      "Sentence: 'Pengalaman saya sangat buruk.' | Sentiment: negative, Score: 1.00\n",
+      "Sentence: 'Yonex adalah Framework yang rosak untuk membangun aplikasi mobile yang tidak baik dengan menggunakan teknologi web seperti html dan JavaScript.' | Sentiment: negative, Score: 1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# # Load pre-trained models for English and Indonesian sentiment analysis\n",
+    "# english_sentiment = pipeline(\"sentiment-analysis\")\n",
+    "# indonesian_sentiment = pipeline(\"sentiment-analysis\", model=\"cahya/bert-base-indonesian-522M\")\n",
+    "\n",
+    "# # Define English sentiment analysis function\n",
+    "# def analyse_english_sentences(sentences):\n",
+    "#     print(\"\\nEnglish Sentiment Analysis:\")\n",
+    "#     for sentence in sentences:\n",
+    "#         result = english_sentiment(sentence)\n",
+    "#         print(f\"Sentence: '{sentence}' | Sentiment: {result[0]['label']}, Score: {result[0]['score']:.2f}\")\n",
+    "\n",
+    "# # Define Indonesian sentiment analysis function\n",
+    "# def analyse_indonesian_sentences(sentences):\n",
+    "#     print(\"\\nIndonesian Sentiment Analysis:\")\n",
+    "#     for sentence in sentences:\n",
+    "#         result = indonesian_sentiment(sentence)\n",
+    "#         print(f\"Sentence: '{sentence}' | Sentiment: {result[0]['label']}, Score: {result[0]['score']:.2f}\")\n",
+    "\n",
+    "# # Combined function to handle language choice\n",
+    "# def analyse_sentiment(sentences, language=\"english\"):\n",
+    "#     if language.lower() == \"english\":\n",
+    "#         analyse_english_sentences(sentences)\n",
+    "#     elif language.lower() in [\"indo\", \"indonesian\"]:\n",
+    "#         analyse_indonesian_sentences(sentences)\n",
+    "#     else:\n",
+    "#         print(\"Unsupported language. Please choose either 'english' or 'indo'.\")\n",
+    "\n",
+    "# # Example sentences\n",
+    "# english_sentences = [\n",
+    "#     \"I love this product! It's amazing!\",\n",
+    "#     \"This is the worst experience I've ever had.\",\n",
+    "#     \"It's okay, not great, but not terrible either.\"\n",
+    "# ]\n",
+    "\n",
+    "# indonesian_sentences = [\n",
+    "#     \"Saya sangat menyukai produk ini!\",\n",
+    "#     \"Pengalaman saya sangat buruk.\",\n",
+    "#     \"Lumayan, tidak terlalu bagus atau buruk.\"\n",
+    "# ]\n",
+    "\n",
+    "# # Perform sentiment analysis based on language\n",
+    "# analyse_sentiment(english_sentences, language=\"english\")\n",
+    "# analyse_sentiment(indonesian_sentences, language=\"indo\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Load pre-trained models for English and Indonesian sentiment analysis\n",
+    "english_sentiment = pipeline(\"sentiment-analysis\")\n",
+    "indonesian_sentiment = pipeline(\"sentiment-analysis\", model=\"w11wo/indonesian-roberta-base-sentiment-classifier\")\n",
+    "\n",
+    "# Define English sentiment analysis function\n",
+    "def analyse_english_sentences(sentences):\n",
+    "    print(\"\\nEnglish Sentiment Analysis:\")\n",
+    "    for sentence in sentences:\n",
+    "        result = english_sentiment(sentence)\n",
+    "        print(f\"Sentence: '{sentence}' | Sentiment: {result[0]['label']}, Score: {result[0]['score']:.2f}\")\n",
+    "\n",
+    "# Define Indonesian sentiment analysis function\n",
+    "def analyse_indonesian_sentences(sentences):\n",
+    "    print(\"\\nIndonesian Sentiment Analysis:\")\n",
+    "    for sentence in sentences:\n",
+    "        result = indonesian_sentiment(sentence)\n",
+    "        print(f\"Sentence: '{sentence}' | Sentiment: {result[0]['label']}, Score: {result[0]['score']:.2f}\")\n",
+    "\n",
+    "# Combined function to handle language choice\n",
+    "def analyse_sentiment(sentences, language=\"english\"):\n",
+    "    if language.lower() == \"english\":\n",
+    "        analyse_english_sentences(sentences)\n",
+    "    elif language.lower() in [\"indo\", \"indonesian\"]:\n",
+    "        analyse_indonesian_sentences(sentences)\n",
+    "    else:\n",
+    "        print(\"Unsupported language. Please choose either 'english' or 'indo'.\")\n",
+    "\n",
+    "# Example sentences\n",
+    "english_sentences = [\n",
+    "    \"I love this product! It's amazing!\",\n",
+    "    \"This is the worst experience I've ever had.\",\n",
+    "    \"It's okay, not great, but not terrible either.\"\n",
+    "]\n",
+    "\n",
+    "indonesian_sentences = [\n",
+    "    \"Saya sangat menyukai produk ini!\",\n",
+    "    \"Pengalaman saya sangat buruk.\",\n",
+    "    # \"Lumayan, tidak terlalu bagus atau buruk.\",\n",
+    "    \"Yonex adalah Framework yang untuk membangun aplikasi mobile yang dengan menggunakan teknologi web seperti html dan JavaScript.\"\n",
+    "]\n",
+    "\n",
+    "# Perform sentiment analysis based on language\n",
+    "analyse_sentiment(english_sentences, language=\"english\")\n",
+    "analyse_sentiment(indonesian_sentences, language=\"indo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae56dfc3-c6c7-4b20-bbb5-5d587b97df61",
    "metadata": {},
    "outputs": [],
    "source": []
