--- a/InterviewAI.ipynb
+++ b/InterviewAI.ipynb
@@ -45,10 +45,16 @@
     "\n",
     "#Does the report use the \"research base example\" or the \"development base project example?\"  Give 2 type report to him to see\n",
     "\n",
+    "\n",
     "!pip install moviepy\n",
     "!pip install SpeechRecognition\n",
     "import moviepy.editor as mp \n",
-    "import speech_recognition as sr "
+    "import speech_recognition as sr \n",
+    "\n",
+    "#For sentiment analysis\n",
+    "!pip install transformers torch\n",
+    "from transformers import pipeline\n",
+    "import torch"
    ]
   },
   {
@@ -164,10 +170,7 @@
     "except Exception as e:\n",
     "    print(f\"An error occurred: {e}\")\n",
     "\n",
-    "#confidence of candidate, give marks base on the word used by the candidate, based on the text\n",
-    "\n",
-    "\n",
-    "\n"
+    "#confidence of candidate, give marks base on the word used by the candidate, based on the text"
    ]
   },
   {
@@ -345,89 +348,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f9f8d637-1392-435d-8bc8-e870311161c1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "7a3df467-4546-49aa-ac8e-a5e412d92b10",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: transformers in c:\\users\\keyu\\anaconda3\\lib\\site-packages (4.43.3)\n",
-      "Requirement already satisfied: torch in c:\\users\\keyu\\anaconda3\\lib\\site-packages (2.4.0)\n",
-      "Requirement already satisfied: filelock in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (3.13.1)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.23.2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (0.24.2)\n",
-      "Requirement already satisfied: numpy>=1.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (1.26.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (23.1)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (6.0.1)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (2023.10.3)\n",
-      "Requirement already satisfied: requests in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (2.32.3)\n",
-      "Requirement already satisfied: safetensors>=0.4.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (0.4.3)\n",
-      "Requirement already satisfied: tokenizers<0.20,>=0.19 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (0.19.1)\n",
-      "Requirement already satisfied: tqdm>=4.27 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers) (4.65.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.8.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (4.9.0)\n",
-      "Requirement already satisfied: sympy in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (1.12)\n",
-      "Requirement already satisfied: networkx in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (3.1)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (3.1.3)\n",
-      "Requirement already satisfied: fsspec in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch) (2023.10.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from jinja2->torch) (2.1.3)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->transformers) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\keyu\\appdata\\roaming\\python\\python311\\site-packages (from requests->transformers) (2.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->transformers) (2.0.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->transformers) (2024.8.30)\n",
-      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sympy->torch) (1.3.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Install necessary libraries\n",
-    "!pip install transformers torch\n",
-    "\n",
-    "# Import libraries\n",
-    "from transformers import pipeline\n",
-    "import torch\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 70,
    "id": "82d407e3-59d5-474c-bd1e-eea797ac14eb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No model was supplied, defaulted to distilbert/distilbert-base-uncased-finetuned-sst-2-english and revision af0f99b (https://huggingface.co/distilbert/distilbert-base-uncased-finetuned-sst-2-english).\n",
-      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "English Sentiment Analysis:\n",
-      "Sentence: 'I love this product! It's amazing!' | Sentiment: POSITIVE, Score: 1.00\n",
-      "Sentence: 'This is the worst experience I've ever had.' | Sentiment: NEGATIVE, Score: 1.00\n",
-      "Sentence: 'It's okay, not great, but not terrible either.' | Sentiment: POSITIVE, Score: 0.99\n",
-      "\n",
-      "Indonesian Sentiment Analysis:\n",
-      "Sentence: 'Saya sangat menyukai produk ini!' | Sentiment: positive, Score: 1.00\n",
-      "Sentence: 'Pengalaman saya sangat buruk.' | Sentiment: negative, Score: 1.00\n",
-      "Sentence: 'Yonex adalah Framework yang rosak untuk membangun aplikasi mobile yang tidak baik dengan menggunakan teknologi web seperti html dan JavaScript.' | Sentiment: negative, Score: 1.00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Load pre-trained models for English and Indonesian sentiment analysis\n",
     "# english_sentiment = pipeline(\"sentiment-analysis\")\n",
@@ -471,55 +395,68 @@
     "\n",
     "# # Perform sentiment analysis based on language\n",
     "# analyse_sentiment(english_sentences, language=\"english\")\n",
-    "# analyse_sentiment(indonesian_sentences, language=\"indo\")\n",
+    "# analyse_sentiment(indonesian_sentences, language=\"indo\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "cee32d01-7c2d-44e3-87f4-7d607cc3cc19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Choose the language for sentiment analysis (eng/id):  id\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text: Yonex adalah Framework untuk membangun aplikasi mobile dengan menggunakan teknologi web seperti html dan JavaScript\n",
+      "Sentiment Analysis (Indonesian): neutral\n",
+      "Sentiment Score: 1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import pipeline\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Load pre-trained models for English and Indonesian sentiment analysis\n",
-    "english_sentiment = pipeline(\"sentiment-analysis\")\n",
+    "# Load pre-trained models\n",
+    "english_sentiment = pipeline(\"sentiment-analysis\", model=\"cardiffnlp/twitter-roberta-base-sentiment\")\n",
     "indonesian_sentiment = pipeline(\"sentiment-analysis\", model=\"w11wo/indonesian-roberta-base-sentiment-classifier\")\n",
     "\n",
-    "# Define English sentiment analysis function\n",
-    "def analyse_english_sentences(sentences):\n",
-    "    print(\"\\nEnglish Sentiment Analysis:\")\n",
-    "    for sentence in sentences:\n",
-    "        result = english_sentiment(sentence)\n",
-    "        print(f\"Sentence: '{sentence}' | Sentiment: {result[0]['label']}, Score: {result[0]['score']:.2f}\")\n",
+    "# Mapping for English sentiment labels\n",
+    "english_label_mapping = {\n",
+    "    \"LABEL_0\": \"negative\",\n",
+    "    \"LABEL_1\": \"neutral\",\n",
+    "    \"LABEL_2\": \"positive\"\n",
+    "}\n",
     "\n",
-    "# Define Indonesian sentiment analysis function\n",
-    "def analyse_indonesian_sentences(sentences):\n",
-    "    print(\"\\nIndonesian Sentiment Analysis:\")\n",
-    "    for sentence in sentences:\n",
-    "        result = indonesian_sentiment(sentence)\n",
-    "        print(f\"Sentence: '{sentence}' | Sentiment: {result[0]['label']}, Score: {result[0]['score']:.2f}\")\n",
-    "\n",
-    "# Combined function to handle language choice\n",
-    "def analyse_sentiment(sentences, language=\"english\"):\n",
-    "    if language.lower() == \"english\":\n",
-    "        analyse_english_sentences(sentences)\n",
-    "    elif language.lower() in [\"indo\", \"indonesian\"]:\n",
-    "        analyse_indonesian_sentences(sentences)\n",
+    "# Function to choose language\n",
+    "def choose_language():\n",
+    "    language = input(\"Choose the language for sentiment analysis (eng/id): \").lower()\n",
+    "    if language == \"eng\":\n",
+    "        result = english_sentiment(text)\n",
+    "        sentiment_label = english_label_mapping[result[0]['label']]\n",
+    "        sentiment_score = result[0]['score']  # Extracting the sentiment score\n",
+    "        print(f\"Text: {text}\")\n",
+    "        print(f\"Sentiment Analysis (English): {sentiment_label}\")\n",
+    "        print(f\"Sentiment Score: {sentiment_score:.2f}\")  # Displaying the sentiment score with 2 decimal points\n",
+    "    elif language == \"id\":\n",
+    "        result = indonesian_sentiment(text)\n",
+    "        sentiment_label = result[0]['label']\n",
+    "        sentiment_score = result[0]['score']  # Extracting the sentiment score\n",
+    "        print(f\"Text: {text}\")\n",
+    "        print(f\"Sentiment Analysis (Indonesian): {sentiment_label}\")\n",
+    "        print(f\"Sentiment Score: {sentiment_score:.2f}\")  # Displaying the sentiment score with 2 decimal points\n",
     "    else:\n",
-    "        print(\"Unsupported language. Please choose either 'english' or 'indo'.\")\n",
+    "        print(\"Invalid choice. Please choose either 'English' or 'Indonesian'.\")\n",
     "\n",
-    "# Example sentences\n",
-    "english_sentences = [\n",
-    "    \"I love this product! It's amazing!\",\n",
-    "    \"This is the worst experience I've ever had.\",\n",
-    "    \"It's okay, not great, but not terrible either.\"\n",
-    "]\n",
-    "\n",
-    "indonesian_sentences = [\n",
-    "    \"Saya sangat menyukai produk ini!\",\n",
-    "    \"Pengalaman saya sangat buruk.\",\n",
-    "    # \"Lumayan, tidak terlalu bagus atau buruk.\",\n",
-    "    \"Yonex adalah Framework yang untuk membangun aplikasi mobile yang dengan menggunakan teknologi web seperti html dan JavaScript.\"\n",
-    "]\n",
-    "\n",
-    "# Perform sentiment analysis based on language\n",
-    "analyse_sentiment(english_sentences, language=\"english\")\n",
-    "analyse_sentiment(indonesian_sentences, language=\"indo\")"
+    "# Run the language selection and sentiment analysis\n",
+    "choose_language()\n"
    ]
   },
   {
