--- a/InterviewAI.ipynb
+++ b/InterviewAI.ipynb
@@ -461,8 +461,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ae56dfc3-c6c7-4b20-bbb5-5d587b97df61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting sentence-transformers\n",
+      "  Downloading sentence_transformers-3.3.1-py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: transformers<5.0.0,>=4.41.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sentence-transformers) (4.43.3)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sentence-transformers) (4.65.0)\n",
+      "Requirement already satisfied: torch>=1.11.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sentence-transformers) (2.4.0)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sentence-transformers) (1.2.2)\n",
+      "Requirement already satisfied: scipy in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sentence-transformers) (1.11.4)\n",
+      "Requirement already satisfied: huggingface-hub>=0.20.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sentence-transformers) (0.24.2)\n",
+      "Requirement already satisfied: Pillow in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sentence-transformers) (10.2.0)\n",
+      "Requirement already satisfied: filelock in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (3.13.1)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (2023.10.0)\n",
+      "Requirement already satisfied: packaging>=20.9 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (23.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (6.0.1)\n",
+      "Requirement already satisfied: requests in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (2.32.3)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (4.9.0)\n",
+      "Requirement already satisfied: sympy in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch>=1.11.0->sentence-transformers) (1.12)\n",
+      "Requirement already satisfied: networkx in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch>=1.11.0->sentence-transformers) (3.1)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from torch>=1.11.0->sentence-transformers) (3.1.3)\n",
+      "Requirement already satisfied: colorama in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from tqdm->sentence-transformers) (0.4.6)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (1.26.4)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (2023.10.3)\n",
+      "Requirement already satisfied: safetensors>=0.4.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (0.4.3)\n",
+      "Requirement already satisfied: tokenizers<0.20,>=0.19 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (0.19.1)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from scikit-learn->sentence-transformers) (1.2.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from scikit-learn->sentence-transformers) (2.2.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from jinja2->torch>=1.11.0->sentence-transformers) (2.1.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\keyu\\appdata\\roaming\\python\\python311\\site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2.0.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2024.8.30)\n",
+      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\keyu\\anaconda3\\lib\\site-packages (from sympy->torch>=1.11.0->sentence-transformers) (1.3.0)\n",
+      "Downloading sentence_transformers-3.3.1-py3-none-any.whl (268 kB)\n",
+      "   ---------------------------------------- 0.0/268.8 kB ? eta -:--:--\n",
+      "   ------ --------------------------------- 41.0/268.8 kB 2.0 MB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 184.3/268.8 kB 2.8 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 268.8/268.8 kB 2.1 MB/s eta 0:00:00\n",
+      "Installing collected packages: sentence-transformers\n",
+      "Successfully installed sentence-transformers-3.3.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install sentence-transformers\n",
+    "from sentence_transformers import SentenceTransformer, util"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "20790d7b-6c5e-46f9-9edb-0a0f5a6bc8e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User query:  Explain semantic analysis applications.\n",
+      "Most Similar Question: What are the applications of semantic analysis?\n",
+      "Answer: Applications include chatbots and sentiment analysis.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load pre-trained SBERT model\n",
+    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
+    "\n",
+    "# Knowledge Base\n",
+    "questions = [\n",
+    "    \"What is semantic analysis?\",\n",
+    "    \"How does semantic analysis work?\",\n",
+    "    \"What are the applications of semantic analysis?\"\n",
+    "]\n",
+    "answers = [\n",
+    "    \"Semantic analysis is understanding meaning in NLP.\",\n",
+    "    \"It works by analysing context and relationships.\",\n",
+    "    \"Applications include chatbots and sentiment analysis.\"\n",
+    "]\n",
+    "\n",
+    "# User Query\n",
+    "query = \"Explain semantic analysis applications.\"\n",
+    "\n",
+    "# Compute embeddings\n",
+    "query_embedding = model.encode(query, convert_to_tensor=True)\n",
+    "question_embeddings = model.encode(questions, convert_to_tensor=True)\n",
+    "\n",
+    "# Compute cosine similarities\n",
+    "similarities = util.cos_sim(query_embedding, question_embeddings)\n",
+    "\n",
+    "# Find the most similar question\n",
+    "most_similar_idx = similarities.argmax()\n",
+    "print(\"User query: \", query)\n",
+    "print(\"Most Similar Question:\", questions[most_similar_idx])\n",
+    "print(\"Answer:\", answers[most_similar_idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "53a784d7-7cdb-4400-ac72-d72c13819edd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comparison Results:\n",
+      "Answer 1: Semantic analysis is used to understand the meaning of sentences.\n",
+      "Marks Awarded: 8.91/10\n",
+      "\n",
+      "Answer 2: It helps in analysing the grammar and structure of text.\n",
+      "Marks Awarded: 4.79/10\n",
+      "\n",
+      "Answer 3: This process identifies relationships in the text.\n",
+      "Marks Awarded: 5.16/10\n",
+      "\n",
+      "Answer 4: Understanding semantics means knowing the words' definitions only.\n",
+      "Marks Awarded: 6.74/10\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "\n",
+    "# Load pre-trained Sentence-BERT model\n",
+    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
+    "\n",
+    "# Define a scoring function\n",
+    "def score_similarity(candidate_answer, model_answer, max_marks=10):\n",
+    "    \"\"\"\n",
+    "    Compares two sentences and assigns a score based on semantic similarity.\n",
+    "    \n",
+    "    Args:\n",
+    "        candidate_answer (str): The answer provided by the candidate.\n",
+    "        model_answer (str): The expected answer or reference answer.\n",
+    "        max_marks (int): The maximum marks assignable.\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: Marks awarded based on similarity.\n",
+    "    \"\"\"\n",
+    "    # Encode sentences to embeddings\n",
+    "    candidate_embedding = model.encode(candidate_answer, convert_to_tensor=True)\n",
+    "    model_embedding = model.encode(model_answer, convert_to_tensor=True)\n",
+    "    \n",
+    "    # Calculate cosine similarity\n",
+    "    similarity = util.cos_sim(candidate_embedding, model_embedding).item()\n",
+    "    \n",
+    "    # Scale similarity to marks\n",
+    "    return round(similarity * max_marks, 2)\n",
+    "\n",
+    "# Model answer (gold standard)\n",
+    "model_answer = \"Semantic analysis is the process of understanding the meaning of text.\"\n",
+    "\n",
+    "# Candidate answers\n",
+    "candidate_answers = [\n",
+    "    \"Semantic analysis is used to understand the meaning of sentences.\",\n",
+    "    \"It helps in analysing the grammar and structure of text.\",\n",
+    "    \"This process identifies relationships in the text.\",\n",
+    "    \"Understanding semantics means knowing the words' definitions only.\"\n",
+    "]\n",
+    "\n",
+    "# Maximum marks\n",
+    "max_marks = 10\n",
+    "\n",
+    "# Compare each candidate answer\n",
+    "print(\"Comparison Results:\")\n",
+    "for idx, candidate in enumerate(candidate_answers, start=1):\n",
+    "    marks = score_similarity(candidate, model_answer, max_marks)\n",
+    "    print(f\"Answer {idx}: {candidate}\\nMarks Awarded: {marks}/{max_marks}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "778ca725-9aaf-483f-a3b5-3cd52735bb8b",
    "metadata": {},
    "outputs": [],
    "source": []
